--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hemp Horizon Shop</title>
+    <link rel="stylesheet" href="../styles/style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to Hemp Horizon Shop</h1>
+        <nav>
+            <a href="products.html">Browse Products</a>
+            <a href="seller.html">Seller Dashboard</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Shop Hemp Products with Ease</h2>
+            <p>Your trusted source for premium hemp-based goods.</p>
+            <a href="products.html" class="btn">Start Shopping</a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Hemp Horizon Shop</p>
+    </footer>
+</body>
+</html>
 
