--- a/html/cart.html
+++ b/html/cart.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shopping Cart</title>
+    <link rel="stylesheet" href="../styles/style.css">
+</head>
+<body>
+    <header>
+        <h1>Hemp Horizon Shop</h1>
+        <nav>
+            <a href="products.html">Back to Products</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Your Cart</h2>
+        <ul id="cart-items"></ul>
+        <button class="btn" onclick="checkout()">Checkout</button>
+    </main>
+    <footer>
+        <p>&copy; 2024 Hemp Horizon Shop</p>
+    </footer>
+    <script src="../scripts/app.js"></script>
+</body>
+</html>
 
