--- a/html/seller.html
+++ b/html/seller.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seller Dashboard</title>
+    <link rel="stylesheet" href="../styles/style.css">
+</head>
+<body>
+    <header>
+        <h1>Seller Dashboard</h1>
+        <nav>
+            <a href="index.html">Home</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Manage Your Inventory</h2>
+        <p>This is a demo page for sellers to manage products and orders.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 Hemp Horizon Shop</p>
+    </footer>
+</body>
+</html>
 
