--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hemp Horizon Shop</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Hemp Horizon Shop</h1>
+    <header class="navbar">
+        <h1>Hemp Horizon Shop</h1>
         <nav>
-            <a href="products.html">Browse Products</a>
-            <a href="seller.html">Seller Dashboard</a>
+            <a href="register.html">Register</a>
+            <a href="search.html">Marketplace</a>
+            <a href="cart.html">Cart</a>
         </nav>
     </header>
-    <main>
-        <section>
-            <h2>Shop Hemp Products with Ease</h2>
-            <p>Your trusted source for premium hemp-based goods.</p>
-            <a href="products.html" class="btn">Start Shopping</a>
-        </section>
+    <main class="hero">
+        <div class="hero-content">
+            <h2>Your Trusted Hemp Marketplace</h2>
+            <p>Buy and sell hemp products with ease and confidence.</p>
+            <a href="search.html" class="btn">Explore Marketplace</a>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Hemp Horizon Shop</p>
     </footer>
 </body>
 </html>
-
