--- a/register.html
+++ b/register.html
@@ -3,48 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hemp Horizon Shop</title>
+    <title>Register</title>
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header class="navbar">
-        <h1>Hemp Horizon Shop</h1>
-        <nav>
-            <a href="register.html">Register</a>
-            <a href="search.html">Marketplace</a>
-            <a href="cart.html">Cart</a>
-        </nav>
+        <h1>Register on Hemp Horizon Shop</h1>
     </header>
-    <main>
-        <!-- Hero Section -->
-        <section class="hero" style="background-image: url('/assets/images/weed-farm.jpg');">
-            <div class="hero-content">
-                <h2>Your Trusted Hemp Marketplace</h2>
-                <p>Connecting buyers and sellers of premium hemp products.</p>
-                <a href="search.html" class="btn">Explore Marketplace</a>
-                <a href="register.html" class="btn secondary">Join Now</a>
-            </div>
-        </section>
+    <main class="form-container">
+        <form id="register-form">
+            <label for="name">Full Name</label>
+            <input type="text" id="name" name="name" required>
 
-        <!-- About Section -->
-        <section class="about">
-            <h2>About Hemp Horizon Shop</h2>
-            <p>
-                Hemp Horizon Shop is your one-stop marketplace for high-quality hemp and cannabis products.
-                From oils to lotions and seeds, we offer a wide range of products to meet your needs.
-            </p>
-        </section>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
 
-        <!-- Benefits Section -->
-        <section class="benefits">
-            <h2>Why Choose Us?</h2>
-            <ul>
-                <li>Trusted and Verified Sellers</li>
-                <li>Secure Transactions</li>
-                <li>Wide Variety of Hemp Products</li>
-                <li>Eco-Friendly and Sustainable</li>
-            </ul>
-        </section>
+            <label for="preferences">Preferences</label>
+            <select id="preferences" name="preferences">
+                <option value="hemp-oil">Hemp Oil</option>
+                <option value="hemp-lotion">Hemp Lotion</option>
+                <option value="hemp-seeds">Hemp Seeds</option>
+            </select>
+
+            <button type="submit" class="btn">Register</button>
+        </form>
     </main>
     <footer>
         <p>&copy; 2024 Hemp Horizon Shop</p>
