--- a/search.html
+++ b/search.html
@@ -3,29 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Marketplace</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <title>Marketplace</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header class="navbar">
-        <h1>Search the Marketplace</h1>
+        <h1>Hemp Horizon Marketplace</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="cart.html">Cart</a>
         </nav>
     </header>
-    <main class="search-container">
-        <form id="search-form">
-            <input type="text" id="search" name="search" placeholder="Search for products..." required>
+    <main>
+        <!-- Search Bar -->
+        <form id="search-form" class="search-bar">
+            <input type="text" id="search" placeholder="Search for products..." required>
             <button type="submit" class="btn">Search</button>
         </form>
-        <div class="product-list" id="product-list">
-            <!-- Product cards dynamically loaded via JavaScript -->
+
+        <!-- Product List -->
+        <div class="product-list">
+            <div class="product-item">
+                <img src="/assets/images/hemp-oil.jpg" alt="Hemp Oil">
+                <h3>Hemp Oil</h3>
+                <p>$19.99</p>
+                <p>Pure and organic hemp oil for wellness.</p>
+                <button class="btn">Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <img src="/assets/images/hemp-seeds.jpg" alt="Hemp Seeds">
+                <h3>Hemp Seeds</h3>
+                <p>$9.99</p>
+                <p>High-quality hemp seeds for nutrition.</p>
+                <button class="btn">Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <img src="/assets/images/hemp-lotion.jpg" alt="Hemp Lotion">
+                <h3>Hemp Lotion</h3>
+                <p>$14.99</p>
+                <p>Moisturizing hemp lotion for your skin.</p>
+                <button class="btn">Add to Cart</button>
+            </div>
         </div>
     </main>
     <footer>
         <p>&copy; 2024 Hemp Horizon Shop</p>
     </footer>
-    <script src="../scripts/app.js"></script>
 </body>
 </html>
