--- a/register.html
+++ b/register.html
@@ -4,28 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <script defer src="/scripts/app.js"></script>
 </head>
 <body>
     <header class="navbar">
         <h1>Register on Hemp Horizon Shop</h1>
     </header>
     <main class="form-container">
-        <form id="register-form">
-            <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" required>
+        <div class="form-toggle">
+            <button id="buyer-btn" class="btn active">Register as Buyer</button>
+            <button id="seller-btn" class="btn">Register as Seller</button>
+        </div>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+        <!-- Buyer Registration Form -->
+        <form id="buyer-form" class="registration-form">
+            <h2>Buyer Registration</h2>
+            <label for="buyer-name">Full Name</label>
+            <input type="text" id="buyer-name" name="buyer-name" required>
 
-            <label for="preferences">Preferences</label>
-            <select id="preferences" name="preferences">
-                <option value="hemp-oil">Hemp Oil</option>
-                <option value="hemp-lotion">Hemp Lotion</option>
-                <option value="hemp-seeds">Hemp Seeds</option>
-            </select>
+            <label for="buyer-email">Email</label>
+            <input type="email" id="buyer-email" name="buyer-email" required>
 
-            <button type="submit" class="btn">Register</button>
+            <label for="buyer-preferences">What are you looking for?</label>
+            <textarea id="buyer-preferences" name="buyer-preferences" rows="3" placeholder="E.g., Hemp oils, lotions, seeds"></textarea>
+
+            <label for="buyer-location">Where are you located?</label>
+            <input type="text" id="buyer-location" name="buyer-location" required>
+
+            <button type="submit" class="btn">Register as Buyer</button>
+        </form>
+
+        <!-- Seller Registration Form -->
+        <form id="seller-form" class="registration-form hidden">
+            <h2>Seller Registration</h2>
+            <label for="seller-name">Full Name</label>
+            <input type="text" id="seller-name" name="seller-name" required>
+
+            <label for="seller-email">Email</label>
+            <input type="email" id="seller-email" name="seller-email" required>
+
+            <label for="business-name">Business Name</label>
+            <input type="text" id="business-name" name="business-name" required>
+
+            <label for="business-type">Type of Business</label>
+            <input type="text" id="business-type" name="business-type" required placeholder="E.g., Retailer, Wholesaler">
+
+            <label for="business-address">Business Address</label>
+            <textarea id="business-address" name="business-address" rows="3"></textarea>
+
+            <label for="business-description">Describe your business</label>
+            <textarea id="business-description" name="business-description" rows="4" placeholder="E.g., We specialize in organic hemp oils"></textarea>
+
+            <label for="seller-location">Where are you located?</label>
+            <input type="text" id="seller-location" name="seller-location" required>
+
+            <button type="submit" class="btn">Register as Seller</button>
         </form>
     </main>
     <footer>
