--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Register - Hemp Horizon Shop</title>
     <link rel="stylesheet" href="styles/style.css">
     <script defer src="scripts/app.js"></script>
 </head>
@@ -12,24 +12,26 @@
         <h1>Register on Hemp Horizon Shop</h1>
     </header>
     <main class="form-container">
-     <div class="form-toggle">
-    <button id="buyer-btn" class="btn active">Register as Buyer</button>
-    <button id="seller-btn" class="btn">Register as Seller</button>
-</div>
+        <!-- Toggle Between Buyer and Seller -->
+        <div class="form-toggle">
+            <button id="buyer-btn" class="btn active">Register as Buyer</button>
+            <button id="seller-btn" class="btn">Register as Seller</button>
+        </div>
+
         <!-- Buyer Registration Form -->
         <form id="buyer-form" class="registration-form">
             <h2>Buyer Registration</h2>
             <label for="buyer-name">Full Name</label>
-            <input type="text" id="buyer-name" name="buyer-name" required>
+            <input type="text" id="buyer-name" name="buyer-name" placeholder="Enter your name" required>
 
             <label for="buyer-email">Email</label>
-            <input type="email" id="buyer-email" name="buyer-email" required>
+            <input type="email" id="buyer-email" name="buyer-email" placeholder="Enter your email" required>
 
-            <label for="buyer-preferences">What are you looking for?</label>
+            <label for="buyer-preferences">What products are you looking for?</label>
             <textarea id="buyer-preferences" name="buyer-preferences" rows="3" placeholder="E.g., Hemp oils, lotions, seeds"></textarea>
 
-            <label for="buyer-location">Where are you located?</label>
-            <input type="text" id="buyer-location" name="buyer-location" required>
+            <label for="buyer-location">Location</label>
+            <input type="text" id="buyer-location" name="buyer-location" placeholder="City, State" required>
 
             <button type="submit" class="btn">Register as Buyer</button>
         </form>
@@ -38,25 +40,25 @@
         <form id="seller-form" class="registration-form hidden">
             <h2>Seller Registration</h2>
             <label for="seller-name">Full Name</label>
-            <input type="text" id="seller-name" name="seller-name" required>
+            <input type="text" id="seller-name" name="seller-name" placeholder="Enter your name" required>
 
             <label for="seller-email">Email</label>
-            <input type="email" id="seller-email" name="seller-email" required>
+            <input type="email" id="seller-email" name="seller-email" placeholder="Enter your email" required>
 
             <label for="business-name">Business Name</label>
-            <input type="text" id="business-name" name="business-name" required>
+            <input type="text" id="business-name" name="business-name" placeholder="Enter your business name" required>
 
             <label for="business-type">Type of Business</label>
-            <input type="text" id="business-type" name="business-type" required placeholder="E.g., Retailer, Wholesaler">
+            <input type="text" id="business-type" name="business-type" placeholder="E.g., Retailer, Wholesaler" required>
 
             <label for="business-address">Business Address</label>
-            <textarea id="business-address" name="business-address" rows="3"></textarea>
+            <textarea id="business-address" name="business-address" rows="3" placeholder="Enter your address"></textarea>
 
             <label for="business-description">Describe your business</label>
             <textarea id="business-description" name="business-description" rows="4" placeholder="E.g., We specialize in organic hemp oils"></textarea>
 
-            <label for="seller-location">Where are you located?</label>
-            <input type="text" id="seller-location" name="seller-location" required>
+            <label for="seller-location">Location</label>
+            <input type="text" id="seller-location" name="seller-location" placeholder="City, State" required>
 
             <button type="submit" class="btn">Register as Seller</button>
         </form>
