--- a/index.html
+++ b/index.html
@@ -8,22 +8,100 @@
 </head>
 <body>
     <header class="navbar">
-        <h1>Hemp Horizon Shop</h1>
-        <nav>
-            <a href="register.html">Register</a>
-            <a href="search.html">Marketplace</a>
-            <a href="cart.html">Cart</a>
-        </nav>
-    </header>
-    <main class="hero">
-        <div class="hero-content">
-            <h2>Your Trusted Hemp Marketplace</h2>
-            <p>Buy and sell hemp products with ease and confidence.</p>
-            <a href="search.html" class="btn">Explore Marketplace</a>
+        <div class="container">
+            <h1>Hemp Horizon Shop</h1>
+            <nav>
+                <a href="register.html">Register</a>
+                <a href="search.html">Marketplace</a>
+                <a href="cart.html">Cart</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </nav>
         </div>
+    </header>
+
+    <main>
+        <!-- Hero Section -->
+        <section class="hero" style="background-image: url('assets/images/weed-farm.jpg');">
+            <div class="container hero-content">
+                <h2>Your Trusted Hemp Marketplace</h2>
+                <p>Buy and sell hemp products with ease and confidence.</p>
+                <a href="search.html" class="btn">Explore Marketplace</a>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <section id="about" class="about">
+            <div class="container">
+                <h2>About Hemp Horizon Shop</h2>
+                <p>
+                    Hemp Horizon Shop is a platform dedicated to connecting buyers and sellers in the hemp industry. We provide
+                    a safe, reliable marketplace for high-quality hemp products, including oils, lotions, seeds, and more.
+                </p>
+                <ul>
+                    <li>Trusted and verified sellers.</li>
+                    <li>Secure transactions with buyer protection.</li>
+                    <li>Eco-friendly and sustainable products.</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Featured Products Section -->
+        <section class="featured-products">
+            <div class="container">
+                <h2>Featured Products</h2>
+                <div class="product-grid">
+                    <div class="product-item">
+                        <img src="assets/images/hemp-oil.jpg" alt="Hemp Oil">
+                        <h3>Hemp Oil</h3>
+                        <p>Pure organic hemp oil for wellness.</p>
+                        <a href="search.html" class="btn secondary">View Details</a>
+                    </div>
+                    <div class="product-item">
+                        <img src="assets/images/hemp-seeds.jpg" alt="Hemp Seeds">
+                        <h3>Hemp Seeds</h3>
+                        <p>High-quality hemp seeds for nutrition.</p>
+                        <a href="search.html" class="btn secondary">View Details</a>
+                    </div>
+                    <div class="product-item">
+                        <img src="assets/images/hemp-lotion.jpg" alt="Hemp Lotion">
+                        <h3>Hemp Lotion</h3>
+                        <p>Moisturizing hemp lotion for skin care.</p>
+                        <a href="search.html" class="btn secondary">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonials Section -->
+        <section class="testimonials">
+            <div class="container">
+                <h2>What Our Customers Say</h2>
+                <div class="testimonial-grid">
+                    <div class="testimonial">
+                        <p>"Hemp Horizon Shop has revolutionized my business. The platform is simple and easy to use!"</p>
+                        <span>- Jane D., Seller</span>
+                    </div>
+                    <div class="testimonial">
+                        <p>"I found the best quality hemp products here. Highly recommend to everyone."</p>
+                        <span>- John S., Buyer</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Hemp Horizon Shop</p>
+        <div class="container">
+            <div class="footer-links">
+                <a href="#about">About</a>
+                <a href="register.html">Register</a>
+                <a href="search.html">Marketplace</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <p>&copy; 2024 Hemp Horizon Shop</p>
+        </div>
     </footer>
 </body>
 </html>
