--- a/cart.html
+++ b/cart.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <script defer src="/scripts/app.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Hemp Horizon Shop</h1>
-        <nav>
-            <a href="products.html">Back to Products</a>
-        </nav>
+    <header class="navbar">
+        <div class="container">
+            <h1>Hemp Horizon Shop</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="search.html">Marketplace</a>
+                <a href="register.html">Register</a>
+            </nav>
+        </div>
     </header>
     <main>
-        <h2>Your Cart</h2>
-        <ul id="cart-items"></ul>
-        <button class="btn" onclick="checkout()">Checkout</button>
+        <div class="container cart-page">
+            <h2>Your Shopping Cart</h2>
+            <ul id="cart-items">
+                <!-- Cart items will be dynamically populated here -->
+                <p>Your cart is empty.</p>
+            </ul>
+            <button id="checkout-button" class="btn">Checkout</button>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Hemp Horizon Shop</p>
+        <div class="container">
+            <p>&copy; 2024 Hemp Horizon Shop</p>
+        </div>
     </footer>
-    <script src="../scripts/app.js"></script>
 </body>
 </html>
-
