--- a/search.html
+++ b/search.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketplace - Hemp Horizon Shop</title>
-    <link rel="stylesheet" href="/styles/style.css">
-    <script defer src="/scripts/app.js"></script>
+    <link rel="stylesheet" href="styles/style.css">
+    <script defer src="scripts/app.js"></script>
 </head>
 <body>
     <header class="navbar">
