--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <!-- Hero Section -->
-        <section class="hero" style="background-image: url('/assets/images/hero-banner.jpg');">
+        <section class="hero" style="background-image: url(assets/images/hero-banner.jpg');">
             <div class="hero-content">
                 <h2>Welcome to Hemp Horizon Shop</h2>
                 <p>Your trusted marketplace for premium hemp products.</p>
