--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <!-- Hero Section -->
-        <section class="hero" style="background-image: url(assets/images/hero-banner.jpg');">
+        <section class="hero" style="background-image: url('assets/images/hero-banner.jpg');">
             <div class="hero-content">
                 <h2>Welcome to Hemp Horizon Shop</h2>
                 <p>Your trusted marketplace for premium hemp products.</p>
@@ -59,6 +59,7 @@
                 <div class="service-item">
                     <h3>Secure Transactions</h3>
                     <p>All payments are safe, ensuring trust between buyers and sellers.</p>
+                    <a href="payment-gateways.html" class="btn">View Payment Gateways</a>
                 </div>
                 <div class="service-item">
                     <h3>Support</h3>
@@ -73,7 +74,7 @@
             <h2>Featured Products</h2>
             <div class="product-list">
                 <div class="product-item">
-                    <img src="/assets/images/hemp-oil.jpg" alt="Hemp Oil">
+                    <img src="assets/images/hemp-oil.jpg" alt="Hemp Oil">
                     <h3>Hemp Oil</h3>
                     <p>Seller: Green Farms</p>
                     <p>Location: Denver, USA</p>
@@ -81,7 +82,7 @@
                     <a href="search.html" class="btn">View Product</a>
                 </div>
                 <div class="product-item">
-                    <img src="/assets/images/hemp-lotion.jpg" alt="Hemp Lotion">
+                    <img src="assets/images/hemp-lotion.jpg" alt="Hemp Lotion">
                     <h3>Hemp Lotion</h3>
                     <p>Seller: Nature Glow</p>
                     <p>Location: Seattle, USA</p>
@@ -89,7 +90,7 @@
                     <a href="search.html" class="btn">View Product</a>
                 </div>
                 <div class="product-item">
-                    <img src="/assets/images/hemp-seeds.jpg" alt="Hemp Seeds">
+                    <img src="assets/images/hemp-seeds.jpg" alt="Hemp Seeds">
                     <h3>Hemp Seeds</h3>
                     <p>Seller: Organic Farms</p>
                     <p>Location: Austin, USA</p>
@@ -97,7 +98,7 @@
                     <a href="search.html" class="btn">View Product</a>
                 </div>
                 <div class="product-item">
-                    <img src="/assets/images/cbd-gummies.jpg" alt="CBD Gummies">
+                    <img src="assets/images/cbd-gummies.jpg" alt="CBD Gummies">
                     <h3>CBD Gummies</h3>
                     <p>Seller: Hemp Delights</p>
                     <p>Location: Miami, USA</p>
@@ -122,3 +123,4 @@
     </footer>
 </body>
 </html>
+
