--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="service-item">
                     <h3>Secure Transactions</h3>
                     <p>All payments are safe, ensuring trust between buyers and sellers.</p>
-                    <a href="payment-gateways.html" class="btn">View Payment Gateways</a>
+                    <a href="payment-gateways.html" class="btn">Payment Gateways</a>
                 </div>
                 <div class="service-item">
                     <h3>Support</h3>
