--- a/search.html
+++ b/search.html
@@ -1,366 +1,98 @@
-/* General Variables */
-:root {
-    --primary-color: #004d40;
-    --secondary-color: #57a773;
-    --light-color: #f9f9f9;
-    --text-color: #333;
-    --white-color: #fff;
-    --border-color: #ddd;
-    --hover-overlay: rgba(255, 255, 255, 0.2);
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marketplace - Hemp Horizon Shop</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script defer src="scripts/app.js"></script>
+</head>
+<body>
+    <!-- Navbar -->
+    <header class="navbar">
+        <div class="container">
+            <h1>Hemp Horizon Shop</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="register.html">Register</a>
+                <a href="add-product.html">Add Product</a>
+                <a href="cart.html">Cart</a>
+            </nav>
+        </div>
+    </header>
 
-/* General Styling */
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: var(--light-color);
-    color: var(--text-color);
-    line-height: 1.6;
-}
+    <main>
+        <!-- Search Bar -->
+        <section class="search-container">
+            <div class="container">
+                <h2>Find Your Hemp Products</h2>
+                <form id="search-form" class="search-bar" role="search">
+                    <input 
+                        type="text" 
+                        id="search" 
+                        placeholder="Search for products..." 
+                        required 
+                        aria-label="Search Products">
+                    <button type="submit" class="btn">Search</button>
+                </form>
+            </div>
+        </section>
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
+        <!-- Product Filters -->
+        <section class="filter-container">
+            <div class="container">
+                <h3>Filter Products</h3>
+                <form id="filter-form">
+                    <label for="category-filter">Category:</label>
+                    <select id="category-filter" aria-label="Filter by Category">
+                        <option value="">All Categories</option>
+                        <option value="Oils">Oils</option>
+                        <option value="Lotions">Lotions</option>
+                        <option value="Seeds">Seeds</option>
+                        <option value="Edibles">Edibles</option>
+                    </select>
+                    <label for="price-filter">Price:</label>
+                    <select id="price-filter" aria-label="Filter by Price">
+                        <option value="">All Prices</option>
+                        <option value="low">Low to High</option>
+                        <option value="high">High to Low</option>
+                    </select>
+                </form>
+            </div>
+        </section>
 
-/* Navbar */
-.navbar {
-    background: var(--primary-color);
-    color: var(--white-color);
-    padding: 1em 20px;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
+        <!-- Product List -->
+        <section class="product-list-container">
+            <div class="container">
+                <h2>Available Products</h2>
+                <div id="product-list" class="product-list">
+                    <!-- Products will be dynamically loaded here -->
+                    <!-- Example static content for structure demonstration -->
+                    <div class="product-item">
+                        <img src="assets/images/hemp-oil.jpg" alt="Hemp Oil">
+                        <h3>Hemp Oil</h3>
+                        <p>Category: Oils</p>
+                        <p>Price: $19.99</p>
+                        <button class="btn">Add to Cart</button>
+                    </div>
+                    <div class="product-item">
+                        <img src="assets/images/hemp-lotion.jpg" alt="Hemp Lotion">
+                        <h3>Hemp Lotion</h3>
+                        <p>Category: Lotions</p>
+                        <p>Price: $14.99</p>
+                        <button class="btn">Add to Cart</button>
+                    </div>
+                    <!-- More dynamic items will be added via JavaScript -->
+                </div>
+            </div>
+        </section>
+    </main>
 
-.navbar h1 {
-    font-size: 1.8em;
-    margin: 0;
-    font-weight: bold;
-}
-
-.navbar nav {
-    display: flex;
-    gap: 1em;
-    flex-wrap: wrap;
-}
-
-.navbar nav a {
-    color: var(--white-color);
-    text-decoration: none;
-    font-size: 1em;
-    padding: 0.5em 1em;
-    border-radius: 5px;
-    transition: background 0.3s ease;
-}
-
-.navbar nav a:hover {
-    background: var(--hover-overlay);
-}
-
-/* Search Container */
-.search-container {
-    text-align: center;
-    padding: 2em 0;
-    background: var(--light-color);
-}
-
-.search-container h2 {
-    font-size: 2em;
-    margin-bottom: 1em;
-}
-
-.search-bar {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    flex-wrap: wrap;
-}
-
-.search-bar input {
-    width: 50%;
-    padding: 0.75em;
-    font-size: 1em;
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-    outline: none;
-}
-
-.search-bar .btn {
-    background: var(--secondary-color);
-    color: var(--white-color);
-    padding: 0.75em 1.5em;
-    border-radius: 5px;
-    font-size: 1em;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-.search-bar .btn:hover {
-    background: #459960;
-}
-
-/* Filter Container */
-.filter-container {
-    text-align: center;
-    padding: 1em 0;
-    background: var(--light-color);
-}
-
-.filter-container h3 {
-    font-size: 1.5em;
-    margin-bottom: 0.5em;
-}
-
-.filter-container form {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    flex-wrap: wrap;
-}
-
-.filter-container select {
-    padding: 0.75em;
-    font-size: 1em;
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-    outline: none;
-}
-
-/* Product List */
-.product-list-container {
-    padding: 2em 0;
-}
-
-.product-list-container h2 {
-    text-align: center;
-    font-size: 2em;
-    margin-bottom: 1em;
-}
-
-.product-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2em;
-}
-
-.product-item {
-    background: var(--white-color);
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-    padding: 1em;
-    text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.product-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.product-item img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
-    margin-bottom: 1em;
-}
-
-.product-item h3 {
-    font-size: 1.2em;
-    margin: 0.5em 0;
-}
-
-.product-item p {
-    font-size: 1em;
-    margin: 0.5em 0;
-}
-
-.product-item .btn {
-    padding: 0.5em 1em;
-    background: var(--secondary-color);
-    color: var(--white-color);
-    border-radius: 5px;
-    font-size: 1em;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-.product-item .btn:hover {
-    background: #459960;
-}
-
-/* Cart Page */
-.cart-page {
-    background: var(--white-color);
-    padding: 2em;
-    margin-top: 2em;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.cart-page h2 {
-    font-size: 2em;
-    margin-bottom: 1em;
-}
-
-.cart-item {
-    list-style: none;
-    margin: 1em 0;
-    padding: 0.5em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #f4f4f9;
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-}
-
-.cart-item button {
-    background: #ff4d4d;
-    color: var(--white-color);
-    border: none;
-    padding: 0.5em 1em;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-.cart-item button:hover {
-    background: #e60000;
-}
-
-/* Testimonials */
-.testimonials {
-    padding: 3em 0;
-    background: var(--primary-color);
-    color: var(--white-color);
-    text-align: center;
-}
-
-.testimonials h2 {
-    font-size: 2em;
-    margin-bottom: 1em;
-}
-
-.testimonial-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5em;
-    justify-content: center;
-}
-
-.testimonial {
-    background: rgba(255, 255, 255, 0.1);
-    padding: 1em;
-    border-radius: 5px;
-    max-width: 300px;
-    font-style: italic;
-}
-
-/* Forms */
-.form-container {
-    background: var(--white-color);
-    padding: 2em;
-    margin: 2em auto;
-    max-width: 500px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-form label {
-    display: block;
-    font-weight: bold;
-    margin-top: 1em;
-}
-
-form input, form textarea {
-    width: 100%;
-    padding: 0.5em;
-    margin-top: 0.5em;
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-}
-
-form button {
-    margin-top: 1.5em;
-    padding: 0.75em;
-    background: var(--secondary-color);
-    color: var(--white-color);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1em;
-    transition: background 0.3s ease;
-}
-
-form button:hover {
-    background: #459960;
-}
-
-form textarea {
-    resize: vertical;
-}
-
-/* Call-to-Action Section */
-.cta {
-    padding: 2em;
-    background-color: var(--primary-color);
-    color: var(--white-color);
-    text-align: center;
-}
-
-.cta .btn {
-    margin: 1em;
-    padding: 10px 20px;
-    background: var(--secondary-color);
-    color: var(--white-color);
-    border-radius: 5px;
-    text-decoration: none;
-    transition: background 0.3s ease;
-}
-
-.cta .btn:hover {
-    background: #459960;
-}
-
-/* Footer */
-footer {
-    background: #333;
-    color: var(--white-color);
-    text-align: center;
-    padding: 1em 0;
-    margin-top: 2em;
-}
-
-footer a {
-    color: var(--secondary-color);
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-footer a:hover {
-    color: #459960;
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-    .search-bar input {
-        width: 80%;
-    }
-
-    .filter-container form {
-        flex-direction: column;
-    }
-
-    .product-list {
-        grid-template-columns: 1fr;
-    }
-}
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Hemp Horizon Shop. All Rights Reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
