--- a/search.html
+++ b/search.html
@@ -4,7 +4,210 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketplace - Hemp Horizon Shop</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <style>
+        /* General Styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* Navbar */
+        .navbar {
+            background: #004d40;
+            color: white;
+            padding: 1em 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .navbar h1 {
+            margin: 0;
+            font-size: 1.8em;
+        }
+
+        .navbar nav {
+            display: flex;
+            gap: 1em;
+        }
+
+        .navbar .btn {
+            text-decoration: none;
+            color: white;
+            background: #57a773;
+            padding: 0.5em 1em;
+            border-radius: 5px;
+            transition: background 0.3s ease;
+        }
+
+        .navbar .btn:hover {
+            background: #459960;
+        }
+
+        .navbar .btn.secondary {
+            background: #004d40;
+        }
+
+        .navbar .btn.secondary:hover {
+            background: #00332d;
+        }
+
+        /* Search Section */
+        .search-container {
+            text-align: center;
+            margin: 2em 0;
+        }
+
+        .search-container h2 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+        }
+
+        .search-bar {
+            display: flex;
+            justify-content: center;
+            gap: 1em;
+            flex-wrap: wrap;
+        }
+
+        .search-bar input {
+            padding: 0.75em;
+            font-size: 1em;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            width: 50%;
+        }
+
+        .search-bar .btn {
+            padding: 0.75em 1.5em;
+            font-size: 1em;
+            border-radius: 5px;
+            background: #57a773;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .search-bar .btn:hover {
+            background: #459960;
+        }
+
+        /* Filter Section */
+        .filter-container {
+            margin: 2em auto;
+            padding: 1.5em;
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+        }
+
+        .filter-container h3 {
+            font-size: 1.5em;
+            margin-bottom: 1em;
+            text-align: center;
+        }
+
+        .filter-bar {
+            display: flex;
+            gap: 1em;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .filter-bar label {
+            font-weight: bold;
+        }
+
+        .filter-bar select {
+            padding: 0.75em;
+            font-size: 1em;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        /* Product List */
+        .product-list-container {
+            margin: 2em 0;
+        }
+
+        .product-list-container h2 {
+            font-size: 2em;
+            text-align: center;
+            margin-bottom: 1em;
+        }
+
+        .product-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2em;
+        }
+
+        .product-item {
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            text-align: center;
+            padding: 1em;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .product-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .product-item img {
+            max-width: 100%;
+            border-radius: 5px;
+            margin-bottom: 1em;
+        }
+
+        .product-item h3 {
+            font-size: 1.2em;
+            margin-bottom: 0.5em;
+        }
+
+        .product-item .btn {
+            padding: 0.5em 1em;
+            background: #004d40;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .product-item .btn:hover {
+            background: #00332d;
+        }
+
+        /* Footer */
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+            margin-top: 2em;
+        }
+
+        footer p {
+            margin: 0;
+        }
+    </style>
     <script defer src="scripts/app.js"></script>
 </head>
 <body>
@@ -25,17 +228,12 @@
         <section class="search-container">
             <h2>Find Your Hemp Products</h2>
             <form id="search-form" class="search-bar" role="search">
-                <input 
-                    type="text" 
-                    id="search" 
-                    placeholder="Search for products..." 
-                    aria-label="Search products" 
-                    required>
+                <input type="text" id="search" placeholder="Search for products..." aria-label="Search products" required>
                 <button type="submit" class="btn">Search</button>
             </form>
         </section>
 
-        <!-- Product Filters -->
+        <!-- Filter Section -->
         <section class="filter-container">
             <h3>Filter Products</h3>
             <form id="filter-form" class="filter-bar">
