--- a/cart.html
+++ b/cart.html
@@ -6,8 +6,132 @@
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="styles/style.css">
     <script defer src="scripts/app.js"></script>
+    <style>
+        /* Embedded CSS for Styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* Navbar */
+        .navbar {
+            background: #004d40;
+            color: white;
+            padding: 1em 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .navbar h1 {
+            margin: 0;
+            font-size: 1.8em;
+        }
+
+        .navbar nav {
+            display: flex;
+            gap: 1em;
+        }
+
+        .navbar a {
+            text-decoration: none;
+            color: white;
+            background: #57a773;
+            padding: 0.5em 1em;
+            border-radius: 5px;
+            transition: background 0.3s ease;
+        }
+
+        .navbar a:hover {
+            background: #459960;
+        }
+
+        /* Cart Page */
+        .cart-page {
+            background: white;
+            margin: 2em auto;
+            padding: 2em;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .cart-page h2 {
+            font-size: 2em;
+            margin-bottom: 1em;
+        }
+
+        #cart-items {
+            list-style: none;
+            padding: 0;
+            margin: 1em 0;
+        }
+
+        .cart-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.75em;
+            margin: 0.5em 0;
+            background: #f4f4f9;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        .cart-item button {
+            background: #ff4d4d;
+            color: white;
+            border: none;
+            padding: 0.5em 1em;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .cart-item button:hover {
+            background: #e60000;
+        }
+
+        .btn {
+            padding: 0.75em 1.5em;
+            background: #57a773;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .btn:hover {
+            background: #459960;
+        }
+
+        /* Footer */
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+            margin-top: 2em;
+        }
+
+        footer p {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
+    <!-- Navbar -->
     <header class="navbar">
         <div class="container">
             <h1>Hemp Horizon Shop</h1>
@@ -18,6 +142,8 @@
             </nav>
         </div>
     </header>
+
+    <!-- Main Content -->
     <main>
         <div class="container cart-page">
             <h2>Your Shopping Cart</h2>
@@ -28,9 +154,11 @@
             <button id="checkout-button" class="btn">Checkout</button>
         </div>
     </main>
+
+    <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Hemp Horizon Shop</p>
+            <p>&copy; 2024 Hemp Horizon Shop. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
