--- a/cart.html
+++ b/cart.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <script defer src="scripts/app.js"></script>
     <style>
-        /* Embedded CSS for Styling */
+        /* General Styling */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -129,6 +127,7 @@
             margin: 0;
         }
     </style>
+    <script defer src="scripts/app.js"></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -158,7 +157,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Hemp Horizon Shop. All Rights Reserved.</p>
+            <p>&copy; 2024 Hemp Horizon Shop</p>
         </div>
     </footer>
 </body>
